<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/restartapp"
        android:id="@+id/title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/datepickerlayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/languagechange"
            android:id="@+id/message"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="false"
            android:textColor="#000000" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/now"
            android:id="@+id/ok"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:background="@drawable/dialog_btn"
            android:textColor="@color/appthemecolor"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/later"
            android:id="@+id/cancel"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_centerVertical="true"
            android:background="@drawable/dialog_btn"
            android:padding="8dp"
            android:textColor="@color/appthemecolor"
            android:layout_toLeftOf="@+id/ok"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>