<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/searchquotes"
        android:id="@+id/title"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usekeywords"
        android:id="@+id/textView27"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/relativeLayout"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/search"
            android:id="@+id/ok"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:background="@drawable/dialog_btn"
            android:layout_gravity="end"
            android:textColor="@color/appthemecolor"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="false"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@drawable/dialog_btn"
            android:padding="8dp"
            android:textColor="@color/appthemecolor"
            android:layout_toLeftOf="@+id/ok"
            android:layout_marginRight="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>