<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto" android:id="@+id/screenlayout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/toplayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="60dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView2"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_bg_ripple"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="@dimen/card_margin_leftright"
                    android:layout_marginLeft="@dimen/card_margin_leftright"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/sendmeyoursuggestion"
                            android:id="@+id/textView"
                            android:textSize="@dimen/font18"
                            android:textColor="#000000"
                            android:layout_gravity="left" />

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_vertical|top"
                            android:hint="@string/enterquotehere"
                            android:inputType="textMultiLine"
                            android:minLines="4"
                            android:textSize="@dimen/font16"
                            android:textColor="#000000"
                            android:textColorHint="#b1404040"
                            android:imeOptions="actionNext"
                            android:backgroundTint="@color/appthemecolor">
                        </EditText>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/editText2"
                            android:backgroundTint="@color/appthemecolor"
                            android:hint="@string/author"
                            android:textColor="#000000"
                            android:textColorHint="#b1404040"
                            android:imeOptions="actionDone"
                            android:textSize="@dimen/font16"
                            android:singleLine="true" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_fab_send"
            fab:fab_size="normal"
            fab:fab_colorNormal="@color/appthemecolor"
            fab:fab_colorPressed="#59a0df"
            fab:fab_colorRipple="#99FFFFFF"
            android:visibility="invisible" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/actionbarShadow"
        android:background="@drawable/card_shadow"
        android:layout_alignParentTop="true">
    </FrameLayout>

</RelativeLayout>